Add command-cleaner script and STATS helper
Introduce clear_duplicate_commands.py to clear and re-sync Discord application commands (provides a small CLI prompt and bot run to remove duplicate slash commands). Add StatsChannel.get_or_create_stats_category in stats_channel.py to locate or create a '📊 STATS' category, set basic permissions, and handle permission/errors. Tidy .gitignore by removing duplicate REPLIT_SETUP.md lines and stop ignoring the new script (also add test_all_fixes.py entry).

--- a/.gitignore
+++ b/.gitignore
@@ -93,10 +93,8 @@ htmlcov/
 *.sql
 check_database.py
 REPLIT_SETUP.md
-REPLIT_SETUP.md
-REPLIT_SETUP.md
 verify_fix.py
 test_team_commands.py
 test_github_integration_preservation.py
 test_cog_loading_blocking.py
-clear_duplicate_commands.py
+test_all_fixes.py
