Add Railway deployment files and checklist
Prepare the repository for Railway deployment by adding deployment artifacts and docs. Added Procfile (worker: python3 main.py), railway.json (Nixpacks builder, startCommand and restart policy), and runtime.txt (python-3.11.7). Included RAILWAY_DEPLOYMENT.md and DEPLOYMENT_CHECKLIST.md to document setup and troubleshooting. Updated .gitignore to ensure the new deployment docs are tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,8 @@ htmlcov/
 !CODEBASE_ANALYSIS.md
 !FIX_SUMMARY.md
 !REPLIT_SETUP.md
+!RAILWAY_DEPLOYMENT.md
+!DEPLOYMENT_CHECKLIST.md
 
 # SQL files - may contain sensitive data
 *.sql
